<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="first"
        app:isPreferenceVisible="false"
        app:defaultValue="false" />

    <Preference
        app:key="username"
        app:isPreferenceVisible="false"
        android:defaultValue="null" />

    <Preference
        app:key="password"
        app:isPreferenceVisible="false"
        android:defaultValue="" />

    <PreferenceCategory app:title="@string/display_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:icon="@drawable/ic_brightness_medium_green_24dp"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/map_type_entries"
            app:entryValues="@array/map_type_values"
            app:key="map_type"
            app:icon="@drawable/ic_map_green_24dp"
            app:title="Tampilan Google Maps"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sahur_header">

        <SwitchPreferenceCompat
            app:key="sahurStatus"
            app:icon="@drawable/ic_access_alarm_green_24dp"
            app:title="@string/sahurStatus_title" />

        <SeekBarPreference
            android:dependency="sahurStatus"
            app:min="10"
            app:key="durBefImsak"
            android:max="150"
            app:title="@string/duration_imsak"
            app:summary="@string/duration_subtitle"
            app:showSeekBarValue="true"/>

        <Preference
            android:selectable="false"
            android:enabled="true"
            android:summary="@string/alarm_message" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_title">

        <Preference
            app:defaultValue="-7.0,109.0"
            app:key="defaultLocation"
            app:icon="@drawable/ic_place_black_24dp"
            app:title="@string/defaultLocation_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <Preference
        android:selectable="false"
        android:enabled="true"
        android:summary="(c) 2020. ShoumHome Teams." />

</PreferenceScreen>
