<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sahur_header">

        <SwitchPreferenceCompat
            app:key="sahurStatus"
            app:icon="@drawable/ic_access_alarm_green_24dp"
            app:title="@string/sahurStatus_title" />

        <SeekBarPreference
            android:dependency="sahurStatus"
            app:min="10"
            app:key="durBefImsak"
            android:defaultValue="60"
            android:max="150"
            app:title="@string/duration_imsak"
            app:summary="@string/duration_subtitle"
            app:showSeekBarValue="true"/>

        <Preference
            android:selectable="false"
            android:enabled="true"
            android:summary="@string/alarm_message" />

    </PreferenceCategory>

</PreferenceScreen>