<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_downloaded_articles"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_downloaded_articles" />
        <item
            android:id="@+id/nav_saved_kajian"
            android:icon="@drawable/ic_baseline_bookmarks_24"
            android:title="@string/menu_saved_kajian" />
    </group>
</menu>
