<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/nama_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_play_circle_outline_100"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/imgThumbnail"
        app:layout_constraintEnd_toEndOf="@+id/imgThumbnail"
        app:layout_constraintStart_toStartOf="@+id/imgThumbnail"
        app:layout_constraintTop_toTopOf="@+id/imgThumbnail"
        android:contentDescription="@string/play_video" />

    <TextView
        android:id="@+id/tvKajianTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/example_kajian_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgThumbnail" />

    <TextView
        android:id="@+id/tvMosqueAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_mosque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKajianTitle" />

    <TextView
        android:id="@+id/tvUstadzName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMosqueAddress" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/on_stage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUstadzName" />

    <TextView
        android:id="@+id/tvTimestampAnnounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp_announce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/tvTimestampDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp_due"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestampAnnounce" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimestampDue" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="84dp"
        android:text="@string/example_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>