<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_article_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgArticle"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/nama_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_Ustad" />

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/likes"
        android:src="@drawable/ic_baseline_thumb_up_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgArticle" />

    <TextView
        android:id="@+id/tvLikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_likes"
        app:layout_constraintBottom_toBottomOf="@+id/imgLike"
        app:layout_constraintStart_toEndOf="@+id/imgLike"
        app:layout_constraintTop_toTopOf="@+id/imgLike" />


    <ImageView
        android:id="@+id/imgCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/post_date"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvLikeCount"
        app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
        app:layout_constraintTop_toTopOf="@+id/tvLikeCount" />

    <TextView
        android:id="@+id/tvPostDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_post_date"
        app:layout_constraintBottom_toBottomOf="@+id/imgCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCalendar"
        app:layout_constraintTop_toTopOf="@+id/imgCalendar" />

    <TextView
        android:id="@+id/tv_nama_Ustad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:gravity="start"
        android:text="@string/nama_ustadz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

    <TextView
        android:id="@+id/tvPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:paddingTop="16dp"
        android:paddingBottom="84dp"
        android:text="@string/example_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCalendar" />

</androidx.constraintlayout.widget.ConstraintLayout>