<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/content_fragment_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="-70dp">

            <LinearLayout
                android:id="@+id/layout_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnFood"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/button_round_rec"
                        android:drawableTop="@drawable/ic_baseline_fastfood_24"
                        android:padding="15dp"
                        android:shadowColor="#000"
                        android:shadowRadius="1.0"
                        android:text="@string/food"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnArticle"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/button_round_rec"
                        android:drawableTop="@drawable/ic_baseline_assignment_24"
                        android:padding="15dp"
                        android:shadowColor="#000"
                        android:shadowRadius="1.0"
                        android:text="@string/article"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnKajian"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/button_round_rec"
                        android:drawableTop="@drawable/ic_baseline_ondemand_video_24"
                        android:padding="15dp"
                        android:shadowColor="#000"
                        android:shadowRadius="1.0"
                        android:text="@string/kajian"
                        android:textAllCaps="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnMosqueLocation"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/button_round_rec"
                        android:drawableTop="@drawable/ic_baseline_location_city_36"
                        android:padding="15dp"
                        android:shadowColor="#000"
                        android:shadowRadius="1.0"
                        android:text="@string/mosque_location"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnCalc"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="@drawable/button_round_rec"
                        android:drawableTop="@drawable/ic_baseline_extension_36"
                        android:padding="15dp"
                        android:shadowColor="#000"
                        android:shadowRadius="1.0"
                        android:text="@string/calc"
                        android:textAllCaps="false" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>