<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <ScrollView
            android:id="@+id/svArticle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/content_show_kajian" />

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/progressMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:padding="30dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:text="@string/load_data"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:padding="30dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imgWarning"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/warning"
            android:src="@drawable/ic_baseline_warning_24" />

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgWarning"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/example_error_message"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvErrorMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/refresh" />

    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabreminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:tint="?android:textColorPrimary"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_notifications_none_24"/>
</RelativeLayout>